# what

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  duk  test.js
src/parser/: CMakeLists.txt  Makefile  element.h  main.c  parser  parser.c  parser.leg  parsing_functions.c  parsing_functions.h  utility_functions.c  utility_functions.h
src/what/: CMakeLists.txt  common.h  duk_console.h  duk_module.c  duk_module.h  info.c  info.h  main.c  what.c  what.h
src/whatapp/: CMakeLists.txt  backend.cpp  backend.hpp  engine.cpp  engine.hpp  main.cpp  preferences.cpp  preferences.hpp  resources.qrc  result-list.cpp  result-list.hpp  window.cpp  window.hpp
src/whatapp/converters/: datastorage.js
src/whatapp/qml/: main.qml
